@@ -57,6 +57,14 @@ JVM.
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">spawn</td>
+    <td valign="top">if enabled allows to start a process which will outlive ant.<br/>
+    Requires fork=true, and not compatible
+    with timeout, input, output, error, result attributes.<br/>
+      (disabled by default)</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">jvm</td>
     <td valign="top">the command used to invoke the Java Virtual Machine,
       default is 'java'.  The command is resolved by java.lang.Runtime.exec().
